# service/api/messages.go
@@ -47,8 +47,7 @@ func (h *APIHandler) handleSendMessage(w http.ResponseWriter, r *http.Request, p
 		return
 	}
 
-	if err := r.ParseMultipartForm(10 << 20); err != nil { // 10 MB max
-		h.errorResponse(w, http.StatusBadRequest, "Failed to parse form data")
+	if !h.requireMultipartForm(w, r, 10<<20) { // 10 MB max
 		return
 	}
 
