# service/api/users.go
@@ -72,8 +72,7 @@ func (h *APIHandler) handleUploadUserPhoto(w http.ResponseWriter, r *http.Reques
 		return
 	}
 
-	if err := r.ParseMultipartForm(10 << 20); err != nil { // 10 MB max
-		h.errorResponse(w, http.StatusBadRequest, "Failed to parse form data")
+	if !h.requireMultipartForm(w, r, 10<<20) { // 10 MB max
 		return
 	}
 
